--- a/03_wednesday/bibliography.bib
+++ b/03_wednesday/bibliography.bib
@@ -19,7 +19,44 @@
 
   Address                  = {Chicago}
 }
+@article{horiuchi2008decomposition,
+  title={A decomposition method based on a model of continuous change},
+  author={Horiuchi, Shiro and Wilmoth, John R and Pletcher, Scott D},
+  journal={Demography},
+  volume={45},
+  number={4},
+  pages={785--801},
+  year={2008},
+  publisher={Springer}
+}
 
+@article{andreev2002algorithm,
+  title={Algorithm for decomposition of differences between aggregate demographic measures and its application to life expectancies, healthy life expectancies, parity-progression ratios and total fertility rates},
+  author={Andreev, Evgueni M and Shkolnikov, Vladimir M and Begun, Alexander Z},
+  journal={Demographic Research},
+  volume={7},
+  pages={499--522},
+  year={2002},
+  publisher={JSTOR}
+}
+
+@article{andreev2012excel,
+  title={An Excel spreadsheet for the decomposition of a difference between two values of an aggregate demographic measure by stepwise replacement running from young to old ages},
+  author={Andreev, Evgueni M and Shkolnikov, Vladimir M},
+  journal={Max Planck Institute for Demographic Research (MPIDR Technical Report TR--2012--002)},
+  year={2012}
+}
+
+@article{caswell1989analysis,
+  title={Analysis of life table response experiments I. Decomposition of effects on population growth rate},
+  author={Caswell, Hal},
+  journal={Ecological Modelling},
+  volume={46},
+  number={3-4},
+  pages={221--237},
+  year={1989},
+  publisher={Elsevier}
+}
 
 @Misc{HFD,
   Title                    = {{{Max Planck Institute for Demographic Research (Germany)} and {Vienna Institute of Demography (Austria)}}},
@@ -97,3 +134,10 @@ url={https://cran.r-project.org/web/packages/HMDHFDplus/index.html}
   journal={Max Planck Institute for Demographic Research},
   year={2017}
 }
+
+@Manual{DemoDecomp,
+    title = {DemoDecomp: Decompose Demographic Functions},
+    author = {Tim Riffe},
+    year = {2020},
+    note = {R package version 1.10.001},
+  }
